tests/baselines/reference/dynamicImportEvaluateSpecifier.errors.txt
tests/cases/compiler/dynamicImportEvaluateSpecifier.ts(4,1): error TS7062: A Promise must be awaited, returned, or explicitly ignored with the 'void' operator
tests/cases/compiler/dynamicImportEvaluateSpecifier.ts(5,1): error TS7062: A Promise must be awaited, returned, or explicitly ignored with the 'void' operator


==== tests/cases/compiler/dynamicImportEvaluateSpecifier.ts (2 errors) ====
    // https://github.com/microsoft/TypeScript/issues/48285
    let i = 0;
    
    import(String(i++));
    ~~~~~~~~~~~~~~~~~~~
!!! error TS7062: A Promise must be awaited, returned, or explicitly ignored with the 'void' operator
    import(String(i++));
    ~~~~~~~~~~~~~~~~~~~
!!! error TS7062: A Promise must be awaited, returned, or explicitly ignored with the 'void' operator
    
    const getPath = async () => {
    	/* in reality this would do some async FS operation, or a web request */
    	return "/root/my/cool/path";
    };
    
    const someFunction = async () => {
    	const result = await import(await getPath());
    };
    